@@ -3,6 +3,9 @@
 # This script reads filenames from STDIN and outputs any relevant provides
 # information that needs to be included in the package.
 
+PATH=/usr/bin:/usr/ccs/bin:/usr/sbin:/sbin
+export PATH
+
 filelist=`grep "lib.*\\.so" | xargs /usr/ucb/file -L 2>/dev/null |\
 	grep "ELF.*dynamic lib" | cut -d: -f1 | sort -u`
 for I in $filelist; do
